<FrameLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    
    >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/shupingbg2"
	    tools:context=".MainActivity" 
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
	    >
		<TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		   android:text="@string/title_hbsc"	     
		      android:layout_gravity="center_vertical"
		      android:id="@+id/title"
		      android:textSize="@dimen/textsize3"
	          android:textColor="#02536e"
		    
		        />	
		   <Button 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:id="@+id/intro"
	       android:text="@string/btn_intro"
	        android:textSize="@dimen/textsize"
	       android:background="@drawable/button_bg"
	       android:textColor="@android:color/white" 
	       android:paddingBottom="5dp"
	       />
	   
	    <Button 
	       
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:id="@+id/checkqr"
	       android:text="@string/btn_checkqr"
	       android:textSize="@dimen/textsize"
	       android:layout_marginTop="5dp"
	       android:background="@drawable/button_bg"
	       android:textColor="@android:color/white" 
	       android:paddingBottom="7dp"
	        />
	  
	    <Button 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:id="@+id/checkpriv"
	       android:text="@string/btn_checkpriv"
	        android:textSize="@dimen/textsize"
	       android:background="@drawable/button_bg"
	       android:textColor="@android:color/white" 
	       android:paddingBottom="5dp"
	       />
	   <Button 	        
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:id="@+id/checkbackup"
	       android:text="@string/btn_checkbackup"
	       android:textSize="@dimen/textsize"
	        android:background="@drawable/button_bg"
	        android:textColor="@android:color/white" 
	       android:paddingBottom="5dp"
	       />
	  
	        
	    
	  
	
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    <ImageView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/lalian_bg"
	    android:id="@+id/lalian"
	    />    
	    
	</LinearLayout>
	
	
	
	
</FrameLayout>
 	
