<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  
    tools:context=".QitaActivity2" 
    android:background="@drawable/shupingbg2"
    android:id="@+id/inputpassword"
    >
      <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      >
	<TextView
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	   android:text="@string/btn_checkbackup"
	     
	      android:layout_gravity="center_vertical"
	      android:id="@+id/title"
	      android:textSize="@dimen/textsize3"
          android:textColor="#02536e"
	      
	        />
	        <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/label_derivedaddress"
	        android:id="@+id/label_address"
	      android:textSize="@dimen/textsize3"
	      android:textColor="@android:color/white" 
	      />
	      <EditText 
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:id="@+id/address"	       
	         android:textSize="@dimen/textsize3"
	         android:background="@drawable/bg_edittext" 
	        
	      />   
	     <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/label_inputpassword"
	      android:textSize="@dimen/textsize3"
	      android:id="@+id/label_inputpassword"
	      android:textColor="@android:color/white" 
	      
	     
	      />
	      <EditText
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	       android:textSize="@dimen/textsize3"
	      android:background="@drawable/bg_edittext"  
	      android:id="@+id/password"
	      android:gravity="top"	
	     android:inputType="textPassword"
		 android:maxLength="30"
		 android:digits="1234567890qwertyuiopasdfghjklzxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ"	
		 android:imeOptions="actionDone"
		   
		
	        />
	     <LinearLayout 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:gravity="center_horizontal"
	     
	          >
	     
		     <Button 
		      android:layout_width="match_parent"
		      android:layout_height="match_parent"
		      android:id="@+id/btn_1"
		      android:text="@string/btn_confirm"  
		       android:textSize="@dimen/textsize"
              android:background="@drawable/button_bg"
              android:paddingBottom="3px"
              android:textColor="@android:color/white" 	
		    
		         />
		   
		   </LinearLayout>
	      

		    
    </LinearLayout>

</FrameLayout>