<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
  
    >
        <SurfaceView
        android:id="@+id/preview_view"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        
        />
    
     <com.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="0dp"
        />    
    
	   
      
     <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:layout_gravity="top"
	    android:background="@drawable/shupingbg3"
	        >
	      <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	   android:text="@string/saomiao"
	     
	      android:layout_gravity="center_vertical"
	      android:id="@+id/title"
	   android:textSize="@dimen/textsize3"
          android:textColor="#02536e"
	 
	        />     
	   
	
		
		<TextView
	      android:layout_width="fill_parent"
	      android:layout_height="100px"
	      android:text="@string/scanqr"
	       android:textSize="@dimen/textsize"
	      android:layout_gravity="center_vertical"
	      android:textColor="@android:color/white" 
	      
	      android:id="@+id/qr_scan_text"
	      />
		 <ImageView 
    	 android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	      android:layout_gravity="center" 
	        android:src="@drawable/erweimakuang" 
	        android:id="@+id/erweimakuang"
	        
	        />    
		<Button
            android:id="@+id/btn_cancel_scan"
            android:layout_width="630px"
            android:layout_height="170px"
            android:layout_gravity="bottom" 
            
            android:layout_centerInParent="true"
            
            android:text="@string/quxiao"
             android:textSize="@dimen/textsize"
             android:background="@drawable/button_bg"
            android:textColor="@android:color/white" 
            android:paddingBottom="5dp"
             />

		
	</LinearLayout>	
       	 
     

       

        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/scan_prompt_info"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout> -->       
    

    </FrameLayout>